--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -12,7 +12,7 @@
         </div>
         <ion-nav-buttons side="right">
             <div class="open-textss">
-                <button class="button button-icon button-clear ion-search post-icon blue brf absolutedone"></button>
+                <button class="button button-icon button-clear ion-search post-icon blue brf absolutedone" ng-click="searchpopup()"></button>
             </div>
         </ion-nav-buttons>
     </ion-nav-bar>
