--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -58,7 +58,7 @@
                 </button>
             </label>
             <div class="btn-save">
-                <button class="button button-small button-positive savebtn">
+                <button class="button button-small button-positive savebtn" ng-click="suggestpost(post)">
                     Save
                 </button>
             </div>
