link suggested post
link suggested post

--- a/templates/fbpost.html
+++ b/templates/fbpost.html
@@ -9,8 +9,10 @@
         <ion-nav-buttons side="right">
             <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <in <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
+            <!--
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
                 </a>
+-->
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-header-bar class="static-header">
