--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -76,13 +76,13 @@
                 </a>
             </div>
             <div class="view-all">
-                <a href="#/app/createpost">View all</a>
+                <a href="#/app/createpost/3">View all</a>
             </div>
         </div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
         <div class="padding-top"></div>
-<!--        <div class="text-center coming-soon"><h2>Coming Soon..</h2></div>-->
+        <!--        <div class="text-center coming-soon"><h2>Coming Soon..</h2></div>-->
     </ion-content>
 </ion-view>
