--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,7 +25,7 @@
                     <div class="profile-pic">
 <!--                        <img image-lazy-src="{{user.image}}" height="150px" width="150px" alt="">-->
 <!--                        <img hires="{{user.image}}" ng-src="http://dellcampassador.com/assets/images/campassador.png">-->
-                        <img ng-src="{{user.image}}" rnLazyBackground class="imageisloading">
+                        <img ng-src="{{user.image}}"  class="imageisloading">
                     </div>
                 </div>
                 <div class="profile-contmain">
