--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -87,7 +87,7 @@
                 <div class="box" on-swipe-left="prevoiuspost()" on-swipe-right="nextpost()">
                     <div class="box-infofb">
                         <div class="fbpost">
-                            <img ng-src="{{facebookpost.image | imagepath}}" alt="">
+                            <img ng-src="{{facebookpost.image | imagepath1}}" alt="" ng-class="loading">
                         </div>
                         <div class="postinfofb">
                             <h5>{{facebookpost.text}}</h5>
