--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -20,7 +20,7 @@
         <div class="row ">
             <div class="col col-33 ">
                 <div class="lead2 ">
-                    <img src="{{rankuser[1].image}} " alt=" ">
+                    <img src="{{rankuser[1].image}} " alt=" " class="imageisloading">
                     <div class="lead12 ">
                         <p>{{rankuser[1].rank}}</p>
                         <h5> {{rankuser[1].name}} </h5>
@@ -30,7 +30,7 @@
             </div>
             <div class="col col-33 ">
                 <div class="lead1 ">
-                    <img src="{{rankuser[0].image}} " alt=" ">
+                    <img src="{{rankuser[0].image}} " alt=" " class="imageisloading">
                     <div class="lead11 ">
                         <p>{{rankuser[0].rank}}</p>
                         <h5> {{rankuser[0].name}} </h5>
@@ -40,7 +40,7 @@
             </div>
             <div class="col col-33 ">
                 <div class="lead3 ">
-                    <img src="{{rankuser[2].image}} " alt=" ">
+                    <img src="{{rankuser[2].image}} " alt=" " class="imageisloading">
                     <div class="lead13 ">
                         <p>{{rankuser[2].rank}}</p>
                         <h5> {{rankuser[2].name}} </h5>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col col-20 ">
                         <div class="pic-lead ">
-                            <img src="{{leader.image}} " alt=" ">
+                            <img src="{{leader.image}} " alt=" " class="imageisloading">
                         </div>
                     </div>
                     <div class="col col-50 ">
