--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="col">
                                 <div class="image-create">
-                                    <img src="{{post.image | imagepath}}" alt="">
+                                    <img src="{{post.image | imagepath}}" alt="" class="imageisloading">
                                 </div>
                             </div>
                             <div class="col">
