--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content>
+    <ion-content class="no-header">
         <div class="profile-contmainall">
             <div class="profile-cont" ng-class="shldopens" ng-click="mkopen();">
                 <div class="titlemain">
