--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -62,7 +62,10 @@
                                 </label>
                                 <label class="item item-input ">
                                     <i class="cityicon iicon "></i>
-                                    <input type="text " placeholder="City " ng-model="profile.city">
+                                    <select>
+                                        <option>demo</option>
+                                    </select>
+<!--                                    <input type="text " placeholder="City " ng-model="profile.city">-->
                                 </label>
                                 <label class="item item-input ">
                                     <i class="bodicon iicon "></i>
