--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -62,10 +62,12 @@
                                 </label>
                                 <label class="item item-input ">
                                     <i class="cityicon iicon "></i>
+<!--
                                     <select>
                                         <option>demo</option>
                                     </select>
-<!--                                    <input type="text " placeholder="City " ng-model="profile.city">-->
+-->
+                                    <input type="text " placeholder="City " ng-model="profile.city">
                                 </label>
                                 <label class="item item-input ">
                                     <i class="bodicon iicon "></i>
