--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,7 +42,7 @@
                         <p class="dob-std">
                             <span class="dob-prf">dob:</span>
                             <span class="dob-title">{{user.dob}} |</span>
-                            <span class="std"> Studied at IBSR, {{user.city}}</span>
+                            <span class="std"> Studied at {{profile.collegename}}, {{user.city}}</span>
                         </p>
 
                     </div>
