--- a/templates/table.html
+++ b/templates/table.html
@@ -57,7 +57,7 @@
                     </h5>
                             <i class="icons ion-reach"></i>
                             <h5>  
-								{{twitter.stats.totalpost}}
+								{{twitter.stats.reach}}
                     </h5>
                         </div>
                     </a>
