--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -58,7 +58,7 @@
                     </h5>
                                 <i class="icons ion-reach"></i>
                                 <h5>  
-                   {{facebook.stats.totalpost}}
+                   {{facebook.stats.reach}}
                     </h5>
                             </div>
                         </a>
