--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -249,7 +249,7 @@
                     </ion-item>
 -->
                 </ion-list>
-                <ion-infinite-scroll icon="ion-loading-c" on-infinite="loadMore()"></ion-infinite-scroll>
+                <ion-infinite-scroll ng-if="scrollload" icon="ion-loading-c" on-infinite="loadMore()"></ion-infinite-scroll>
             </div>
         </div>
     </ion-content>
