--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <ion-infinite-scroll icon="ion-loading-c " on-infinite="loadMore() "></ion-infinite-scroll>
+                <ion-infinite-scroll ng-if="scrollload" icon="ion-loading-c " on-infinite="loadMore() "></ion-infinite-scroll>
             </div>
         </div>
     </ion-content>
